--- a/css/index.css
+++ b/css/index.css
@@ -1,1 +1,259 @@
-/* Compile your LESS file! */
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
+}
+body {
+  line-height: 1;
+}
+ol,
+ul {
+  list-style: none;
+}
+blockquote,
+q {
+  quotes: none;
+}
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: '';
+  content: none;
+}
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+/* Set every element's box-sizing to border-box */
+* {
+  box-sizing: border-box;
+}
+html,
+body {
+  height: 100%;
+}
+h1 {
+  font-size: 55px;
+  text-align: left;
+  font: Arial;
+  padding-left: 5px;
+  border-bottom:1px solid grey;
+  padding-bottom: 40px;
+  margin-bottom:5px;
+}
+.button {
+  background-color: grey;
+  border: 1px solid white;
+  color:white;
+  padding:5px;
+  display: inline-block;
+  font-size: 16px;
+  margin:5px;
+  text-align:center;
+  border-radius: 4px;
+}
+.top p {
+  padding:5px;
+}
+.top {
+  padding: 40px;
+  background-color: lightgray;
+ margin: 40px;
+}
+
+h2 {
+  font-size:45px;
+  padding-bottom:4px;
+  text-align: center;
+  color: black;
+}
+.middle {
+  padding: 40px;
+  font-size: 25px;
+  margin:50px;
+ 
+  display:flex;
+  flex-flow: row;
+}
+.skills {
+  width:50%;
+  margin: 20px;
+  color: grey;
+}
+.work-history {
+  width:50%;
+  margin: 20px;
+  color: grey;
+}
+ul {
+  border: 1px solid grey;
+  border-radius: 2px;
+  margin: 0px;
+  padding:5px;
+  
+}
+li {
+  border-bottom:1px solid grey;
+  border-top:0;
+  padding-top:10px;
+  padding-bottom:10px;}
+h3 {
+  padding: 10px;
+}
+
+
+  header nav {
+    display: flex;
+    width: 691px;
+    vertical-align: top;
+    margin-top: 35px;
+    align-content: right;
+  }
+  
+  header nav a {
+    margin-right: 20px;
+    margin-left: 20px;
+    font-size: 14px;
+    color: gray;
+    text-decoration: none;
+  }
+  
+  header nav a:hover {
+    text-decoration: underline;
+  }
+    
+  header nav a:first-child {
+    margin-left: 100%;
+  }
+    
+  @media (max-width:500px){
+    .top div{
+      display: inline-block;
+      width:100%;
+      margin-right: 10px; 
+  }
+  .middle div {
+      display: initial;
+      width: 100%;
+      margin-right: 10px;
+    flex-direction:column;}
+      
+  nav {
+          display: block;
+          width: 10%;
+          overflow: hidden;
+          position: relative;
+    }
+
+  }
+    
+    footer {
+      background-color: gray;
+      color: white;
+      padding:20px;
+      text-align:center;
+
+    }
+  
